--- a/resources/css/app-base.css
+++ b/resources/css/app-base.css
@@ -34,6 +34,7 @@ a {
 body {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .hero {
     min-width: 102.4rem;
@@ -130,9 +131,11 @@ body {
     display: flex;
     height: 40px;
     gap: 0 1rem;
+    justify-content: center;
+    align-items: center;
 }
 .search input {
-    width: calc(80% - 2px - 10px);
+    width: 400px;
     outline: none;
     border: 1px solid #ccc;
     padding: 10px;
@@ -145,8 +148,9 @@ body {
 }
 
 .search > button {
-    width: 15%;
-    height: 100%;
+    width: max-content;
+    height: max-content;
+    padding: 5px 15px;
     font-size: calc(var(--fontSize-desc) - 0.2rem);
 }
 
@@ -211,3 +215,5 @@ body {
     left: 0;
     z-index: 3;
 }
+
+
