--- a/resources/css/responsive-mobile.css
+++ b/resources/css/responsive-mobile.css
@@ -34,7 +34,7 @@
     }
     .section__details {
         width: 100vw;
-        margin: 20px auto 0;
+        margin: 0 auto 0;
         overflow: scroll;
     }
     
