--- a/resources/css/app-base.css
+++ b/resources/css/app-base.css
@@ -66,6 +66,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: calc(80vw - 60px);
     height: calc(100vh - 90px - 100px);
     margin: 0 auto;
